# hypertext

./: .gitignore  README.md  cli.py  eval.jsonl  predictions.jsonl  pyproject.toml  test_inputs.txt
.github/: copilot-instructions.md
configs/: data_config.yaml  model_config.yaml  train_config.yaml
notes/: specs.txt
src/: create_corpus.py
src/data/: __init__.py  dataset_builder.py  generator.py  gold_loader.py  lexicon.py
src/eval/: evaluator.py  metrics.py  test_loader.py
src/inference/: beam_search.py  expander.py  model_loader.py  quantize.py
src/train/: callbacks.py  config.py  trainer.py
src/utils/: normalization.py
tests/: test_expander.py  test_generator.py  test_metrics.py
tests/fixtures/: sample_pairs.jsonl
